--- a/GHKMuse.css
+++ b/GHKMuse.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'GHK-MuSe';
+  font-family: 'GHK MuSe';
   src: url('GHK-MuSe.eot');
   src: url('GHK-MuSe.eot?#iefix') format('embedded-opentype'),
        url('https://saosump.github.io/font/GHKMuSe.woff2') format('woff2');
@@ -8,7 +8,7 @@
 }
 
 @font-face {
-  font-family: 'GHKMuse';
+  font-family: 'GHK Muse';
   src: url('GHKMuse.svg#GHKMuse') format('svg'),
        url('https://saosump.github.io/font/GHKMuse.ttf') format('truetype'),
        url('https://saosump.github.io/font/GHKMuse.woff') format('woff');
