--- a/GHKMuse.css
+++ b/GHKMuse.css
@@ -1,18 +1,6 @@
-@font-face {
-  font-family: 'GHK MuSe';
-  src: url('GHK-MuSe.eot');
-  src: url('GHK-MuSe.eot?#iefix') format('embedded-opentype'),
-       url('https://saosump.github.io/font/GHKMuSe.woff2') format('woff2');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'GHK Muse';
-  src: url('GHKMuse.svg#GHKMuse') format('svg'),
-       url('https://saosump.github.io/font/GHKMuse.ttf') format('truetype'),
-       url('https://saosump.github.io/font/GHKMuse.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
+     @font-face {
+        font-family: &#39;GHK Muse&#39;;
+        src: url(&quot;https://saosump.github.io/font/GHKMuse.woff&quot;) format(&quot;woff&quot;),
+          url(&quot;https://saosump.github.io/font/GHKMuSe.woff2&quot;) format(&quot;woff2&quot;),
+          url(&quot;https://saosump.github.io/font/GHKMuse.ttf&quot;) format(&quot;ttf&quot;);
+      }
