--- a/NKSSmart2/font.css
+++ b/NKSSmart2/font.css
@@ -1,15 +1,6 @@
-@font-face {
-  font-family: 'NKSSmart2';
-  src: url('NKSSmart2.ttf') format('truetype'),
-       url('NKSSmart2.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'NK_SSmart2';
-  src: url('NK_SSmart2.woff2') format('woff2');
-  font-weight: normal;
-  font-style: normal;
-}
-
+     @font-face {
+        font-family:"GHK Muse";
+        src: url("https://saosump.github.io/font/NKSSmart2/NKSSmart2.woff") format("woff"),
+          url("https://saosump.github.io/font/NKSSmart2/NKSSmart2.woff2") format("woff2"),
+          url("https://saosump.github.io/font/NKSSmart2/NKSSmart2.ttf") format("ttf");
+      }
