--- a/NKSSmart2/font.css
+++ b/NKSSmart2/font.css
@@ -1,5 +1,5 @@
      @font-face {
-        font-family:"GHK Muse";
+        font-family:"NK SSmart2";
         src: url("https://saosump.github.io/font/NKSSmart2/NKSSmart2.woff") format("woff"),
           url("https://saosump.github.io/font/NKSSmart2/NKSSmart2.woff2") format("woff2"),
           url("https://saosump.github.io/font/NKSSmart2/NKSSmart2.ttf") format("ttf");
