--- a/GHKMuse.css
+++ b/GHKMuse.css
@@ -1,6 +1,6 @@
      @font-face {
         font-family:"GHK Muse";
-        src: url("https://saosump.github.io/font/GHKMuse.woff") format("woff"),
-          url("https://saosump.github.io/font/GHKMuSe.woff2") format("woff2"),
-          url("https://saosump.github.io/font/GHKMuse.ttf") format("ttf");
+        src: url("https://saos-ump.github.io/font/GHKMuse.woff") format("woff"),
+          url("https://saosu-mp.github.io/font/GHKMuSe.woff2") format("woff2"),
+          url("https://saosu-mp.github.io/font/GHKMuse.ttf") format("ttf");
       }
