--- a/NKSSmart2/font.css
+++ b/NKSSmart2/font.css
@@ -1,6 +1,6 @@
      @font-face {
         font-family:"NK SSmart2";
-        src: url("https://saosump.github.io/font/NKSSmart2/NKSSmart2.woff") format("woff"),
-          url("https://saosump.github.io/font/NKSSmart2/NKSSmart2.woff2") format("woff2"),
-          url("https://saosump.github.io/font/NKSSmart2/NKSSmart2.ttf") format("ttf");
+        src: url("https://saosu-mp.github.io/font/NKSSmart2/NKSSmart2.woff") format("woff"),
+          url("https://saosu-mp.github.io/font/NKSSmart2/NKSSmart2.woff2") format("woff2"),
+          url("https://saosu-mp.github.io/font/NKSSmart2/NKSSmart2.ttf") format("ttf");
       }
