--- a/NKSSmart3/font.css
+++ b/NKSSmart3/font.css
@@ -1,6 +1,6 @@
      @font-face {
         font-family:"NK SSmart3";
-        src: url("https://saosump.github.io/font/NKSSmart3/NKSSmart3.woff") format("woff"),
-          url("https://saosump.github.io/font/NKSSmart3/NKSSmart3.woff2") format("woff2"),
-          url("https://saosump.github.io/font/NKSSmart3/NKSSmart3.ttf") format("ttf");
+        src: url("https://saosu-mp.github.io/font/NKSSmart3/NKSSmart3.woff") format("woff"),
+          url("https://saosu-mp.github.io/font/NKSSmart3/NKSSmart3.woff2") format("woff2"),
+          url("https://saosu-mp.github.io/font/NKSSmart3/NKSSmart3.ttf") format("ttf");
       }
