--- a/NamKhoneUnicode/font.css
+++ b/NamKhoneUnicode/font.css
@@ -1,6 +1,6 @@
      @font-face {
         font-family:"NamKhoneUnicode";
-        src: url("https://saosump.github.io/font/NamKhoneUnicode/NamKhoneUnicode.woff") format("woff"),
-          url("https://saosump.github.io/font/NamKhoneUnicode/NamKhoneUnicode.woff2") format("woff2"),
-          url("https://saosump.github.io/font/NamKhoneUnicode/NamKhoneUnicode.ttf") format("ttf");
+        src: url("https://saosu-mp.github.io/font/NamKhoneUnicode/NamKhoneUnicode.woff") format("woff"),
+          url("https://saosu-mp.github.io/font/NamKhoneUnicode/NamKhoneUnicode.woff2") format("woff2"),
+          url("https://saosu-mp.github.io/font/NamKhoneUnicode/NamKhoneUnicode.ttf") format("ttf");
       }
