--- a/all.css
+++ b/all.css
@@ -24,7 +24,7 @@
       }
      @font-face {
         font-family:"GHK Muse";
-        src: url("https://github.com/SaoSu-mp/font/GHKMuSe/GHKMuSe.woff") format("woff"),
+        src: url("https://saosu-mp.github.io/font/GHKMuSe/GHKMuse.woff") format("woff"),
           url("https://saosu-mp.github.io/font/GHKMuSe/GHKMuSe.woff2") format("woff2"),
           url("https://saosu-mp.github.io/font/GHKMuSe/GHKMuse.ttf") format("ttf");
       }
