--- a/all.css
+++ b/all.css
@@ -68,6 +68,17 @@
              url("https://saosu-mp.github.io/font/LuenTai.info/LuenTai.info.woff2") format("woff2"),
              url("https://saosu-mp.github.io/font/LuenTai.info/LuenTai.info.ttf") format("ttf");
       }
+     @font-face {
+        font-family:"PangLong";
+        src: url("https://saosu-mp.github.io/font/PangLong/PangLong.woff") format("woff"),
+             url("https://saosu-mp.github.io/font/PangLong/PangLong.woff2") format("woff2"),
+             url("https://saosu-mp.github.io/font/PangLong/PangLong.ttf") format("ttf");
+      }
+     @font-face {
+       font-family:'Ours-Unicode';
+       src:local('Ours-Unicode'), url('https://mmwebfonts.comquas.com/fonts/oursunicode.woff') format('woff'), 
+             url('https://mmwebfonts.comquas.com/fonts/oursunicode.ttf') format('ttf');
+     }
    @font-face {
    font-family: 'Myanmar Sans Pro';
    font-style: normal;
@@ -77,4 +88,15 @@
         url(//fonts.gstatic.com/ea/myanmarsanspro/v4/MyanmarSansPro-Regular.woff2) format('woff2'),
         url(//fonts.gstatic.com/ea/myanmarsanspro/v4/MyanmarSansPro-Regular.woff) format('woff'),
         url(//fonts.gstatic.com/ea/myanmarsanspro/v4/MyanmarSansPro-Regular.ttf) format('truetype');
+     }
+   @font-face {
+     font-family:'Pyidaungsu';
+     src:local('Pyidaungsu'), url('https://mmwebfonts.comquas.com/fonts/Pyidaungsu-2.1_Regular.woff') format('woff'), 
+           url('https://mmwebfonts.comquas.com/fonts/Pyidaungsu-2.1_Regular.ttf') format('ttf');
+     }
+   @font-face {
+     font-family:'Pyidaungsu';
+     src:local('Pyidaungsu'), url('https://mmwebfonts.comquas.com/fonts/Pyidaungsu-2.1_Bold.woff') format('woff'), 
+           url('https://mmwebfonts.comquas.com/fonts/Pyidaungsu-2.1_Bold.ttf') format('ttf');
+     font-weight:bold;
      }
