--- a/all.css
+++ b/all.css
@@ -86,6 +86,16 @@
        src:local('Ours-Unicode'), url('https://mmwebfonts.comquas.com/fonts/oursunicode.woff') format('woff'), 
              url('https://mmwebfonts.comquas.com/fonts/oursunicode.ttf') format('ttf');
      }
+@font-face {
+  font-family: 'Tharlon';
+  font-style: normal;
+  font-weight: 400;
+  src: url(//fonts.gstatic.com/ea/tharlon/v3/Tharlon-Regular.eot);
+  src: url(//fonts.gstatic.com/ea/tharlon/v3/Tharlon-Regular.eot?#iefix) format('embedded-opentype'),
+       url(//fonts.gstatic.com/ea/tharlon/v3/Tharlon-Regular.woff2) format('woff2'),
+       url(//fonts.gstatic.com/ea/tharlon/v3/Tharlon-Regular.woff) format('woff'),
+       url(//fonts.gstatic.com/ea/tharlon/v3/Tharlon-Regular.ttf) format('truetype');
+}
    @font-face {
    font-family: 'Myanmar Sans Pro';
    font-style: normal;
