--- a/all.css
+++ b/all.css
@@ -23,6 +23,12 @@
              url("https://saosu-mp.github.io/font/PangLong/PangLong.ttf") format("ttf");
       }
      @font-face {
+        font-family:"Yunghkio Unicode";
+        src: url("https://saosu-mp.github.io/font/YunghkioUnicode/YunghkioUnicode.woff") format("woff"),
+             url("https://saosu-mp.github.io/font/YunghkioUnicode/YunghkioUnicode.woff2") format("woff2"),
+             url("https://saosu-mp.github.io/font/YunghkioUnicode/YunghkioUnicode.ttf") format("ttf");
+      }
+     @font-face {
        font-family:'Ours-Unicode';
        src:local('Ours-Unicode'), url('https://mmwebfonts.comquas.com/fonts/oursunicode.woff') format('woff'), 
              url('https://mmwebfonts.comquas.com/fonts/oursunicode.ttf') format('ttf');
