--- a/all.css
+++ b/all.css
@@ -41,6 +41,12 @@
              url("https://saosu-mp.github.io/font/YunghkioPop/YunghkioPop.ttf") format("ttf");
       }
      @font-face {
+        font-family:"Shan Unicode";
+        src: url("https://saosu-mp.github.io/font/ShanUnicode/ShanUnicode.woff") format("woff"),
+             url("https://saosu-mp.github.io/font/ShanUnicode/ShanUnicode.woff2") format("woff2"),
+             url("https://saosu-mp.github.io/font/ShanUnicode/ShanUnicode.ttf") format("ttf");
+      }
+     @font-face {
        font-family:'Ours-Unicode';
        src:local('Ours-Unicode'), url('https://mmwebfonts.comquas.com/fonts/oursunicode.woff') format('woff'), 
              url('https://mmwebfonts.comquas.com/fonts/oursunicode.ttf') format('ttf');
