--- a/all.css
+++ b/all.css
@@ -53,10 +53,13 @@
              url("https://saosu-mp.github.io/font/ShanUnicode/ShanUnicode.ttf") format("ttf");
       }
      @font-face {
-       font-family:'Ours-Unicode';
-       src:local('Ours-Unicode'), url('https://mmwebfonts.comquas.com/fonts/oursunicode.woff') format('woff'), 
-             url('https://mmwebfonts.comquas.com/fonts/oursunicode.ttf') format('ttf');
-     }
+     @font-face {
+        font-family:"Ours-Unicode";
+        src: url("https://saosu-mp.github.io/font/Ours-Unicode/Ours-Unicode.woff") format("woff"),
+             url("https://saosu-mp.github.io/font/Ours-Unicode/Ours-Unicode.woff2") format("woff2"),
+             url("https://saosu-mp.github.io/font/Ours-Unicode/Ours-Unicode.ttf") format("ttf");
+      }
+ 
      @font-face {
       font-family: 'Tharlon';
        font-style: normal;
