--- a/all.css
+++ b/all.css
@@ -439,3 +439,9 @@
              url("https://saosu-mp.github.io/font/MyanmarPaOhOne/MyanmarPaOhOne.woff2") format("woff2"),
              url("https://saosu-mp.github.io/font/MyanmarPaOhOne/MyanmarPaOhOne.ttf") format("ttf");
       }
+   @font-face {
+        font-family:"003KoZKJR";
+        src: url("https://saosu-mp.github.io/font/003KoZKJR/003KoZKJR.woff") format("woff"),
+             url("https://saosu-mp.github.io/font/003KoZKJR/003KoZKJR.woff2") format("woff2"),
+             url("https://saosu-mp.github.io/font/003KoZKJR/003KoZKJR.ttf") format("ttf");
+      }
